@@ -55,6 +55,7 @@ JDETAILS="Details"
 JDISABLED="Disabled"
 JENABLED="Enabled"
 JERROR_ALERTNOAUTHOR="You are not authorised to view this resource."
+JFEATURED="Featured"
 JFALSE="False"
 JGROUPS="Groups"
 JHIDE="Hide"
